1.3-cni/manifests/netpol-pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-test
---
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: policy-test
  labels:
    app: web
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: policy-test
  labels:
    run: client
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
