1.3-cni/manifests/policy-test-same-node.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-test
---
apiVersion: v1
kind: Pod
metadata:
  name: web-same-node
  namespace: policy-test
  labels:
    app: web
spec:
  nodeSelector:
    kubernetes.io/hostname: node1
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: client-same-node
  namespace: policy-test
  labels:
    run: client
spec:
  nodeSelector:
    kubernetes.io/hostname: node1
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
